test(restaurant): 식당 즐겨찾기 테스트 코드 작성